--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "antied test",
-  "originalName": "antied test",
+  "originalName": "Cute Moodle v1.4.4",
   "description": "Keeps a temporary record of deleted messages and any edits until you reload the app.",
   "main": "index.jsx",
   "authors": [
