--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "antied test",
+  "name": "Cute Moodle v1.4.4",
   "originalName": "Cute Moodle v1.4.4",
   "description": "Keeps a temporary record of deleted messages and any edits until you reload the app.",
   "main": "index.jsx",
