--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Cute Moodle v1.4.4",
   "originalName": "Cute Moodle v1.4.4",
   "description": "Keeps a temporary record of deleted messages and any edits until you reload the app.",
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "authors": [
     {
       "name": "Angelw0lf",
